infras/k8s/report-manifests/report-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: report
  template:
    metadata:   
      labels: 
        app: report
    spec:
      imagePullSecrets:
        - name: authenticate-registry
      hostAliases:
        - ip: "192.168.73.101"
          hostnames:
          - "gitlab.taskscheduler.com"
      containers:
        - name: report
          image: longle2003/report
---

apiVersion: v1
kind: Service
metadata:
  name: report-srv
spec:  
  selector:
    app: report
  ports:
    - name: report
      protocol: TCP
      port: 4010
      targetPort: 4010
