infras/k8s/report-manifests/report-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    # konghq.com/protocols: https
    konghq.com/methods: GET,POST,PUT,DELETE
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/report/
            pathType: Prefix
            backend:
              service:
                name: report-srv
                port: 
                  number: 4010
